// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CertificateAndLimits renders certificate and buttons for non-collection LOC and LO 1`] = `
<div
  className="CertificateAndLimits"
>
  <Row>
    <Col>
      <div
        className="certificate"
      >
        <h2>
          LOC Certificate public web address (URL):
          <ViewCertificateButton
            url="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
          <CopyPasteButton
            value="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
        </h2>
      </div>
    </Col>
  </Row>
  <Row>
    <Col>
      <div
        className="buttons-row"
      >
        <ButtonGroup
          align="center"
        >
          <ArchiveButton />
          <StatementOfFactsButton />
        </ButtonGroup>
      </div>
    </Col>
  </Row>
</div>
`;

exports[`CertificateAndLimits renders certificate and limits for void collection LOC and User 1`] = `
<div
  className="CertificateAndLimits"
>
  <Row>
    <Col>
      <div
        className="certificate"
      >
        <h2>
          LOC Certificate public web address (URL):
          <ViewCertificateButton
            url="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
          <CopyPasteButton
            value="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
        </h2>
      </div>
    </Col>
    <Col>
      <div
        className="limits"
      >
        <div>
          <strong>
            Collection Date Limit:
          </strong>
           
          <InlineDateTime
            dateOnly={true}
          />
        </div>
        <div>
          <strong>
            Collection Item Limit:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Collection Upload Accepted:
          </strong>
           
          No
        </div>
      </div>
    </Col>
  </Row>
  <Row>
    <Col>
      <div
        className="buttons-row"
      >
        <ButtonGroup
          align="center"
        />
      </div>
    </Col>
  </Row>
</div>
`;

exports[`CertificateAndLimits renders certificate, limits and buttons for closed non-void collection LOC and LO 1`] = `
<div
  className="CertificateAndLimits"
>
  <Row>
    <Col>
      <div
        className="certificate"
      >
        <h2>
          LOC Certificate public web address (URL):
          <ViewCertificateButton
            url="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
          <CopyPasteButton
            value="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
        </h2>
      </div>
    </Col>
    <Col>
      <div
        className="limits"
      >
        <div>
          <strong>
            Collection Date Limit:
          </strong>
           
          <InlineDateTime
            dateOnly={true}
          />
        </div>
        <div>
          <strong>
            Collection Item Limit:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Collection Upload Accepted:
          </strong>
           
          No
        </div>
      </div>
    </Col>
  </Row>
  <Row>
    <Col>
      <div
        className="buttons-row"
      >
        <ButtonGroup
          align="center"
        >
          <Button
            onClick={[Function]}
          >
            <Icon
              height="22px"
              icon={
                Object {
                  "id": "cog",
                }
              }
            />
             Get dev settings
          </Button>
          <ArchiveButton />
        </ButtonGroup>
      </div>
    </Col>
  </Row>
  <Dialog
    actions={
      Array [
        Object {
          "buttonText": "Close",
          "buttonVariant": "primary",
          "callback": [Function],
          "id": "close",
        },
      ]
    }
    className="CertificateAndLimits"
    show={false}
    size="xl"
  >
    <h2>
      Get developper settings for the requester application
    </h2>
    <p>
      Settings available below must be communicated to the developer of the application that will send data using logion API to record it according to the current Collection LOC scope.
    </p>
    <StaticLabelValue
      label="Documentation"
      value={
        <NewTabLink
          href="https://github.com/logion-network/logion-collection-item-submitter#logion-collection-item-submitter"
        >
          https://github.com/logion-network/logion-collection-item-submitter
        </NewTabLink>
      }
    />
    <StaticLabelValue
      label="Logion endpoint"
      value={
        <p>
          ws://localhost:9944
        </p>
      }
    />
    <StaticLabelValue
      label="Signature will be executed by the following public key"
      value={<p />}
    />
    <StaticLabelValue
      label="Extrinsic"
      value={
        <p>
          logionLoc.addCollectionItem(collectionLocId, itemId, itemDescription)
        </p>
      }
    />
    <div
      className="arguments"
    >
      <h3>
        Arguments
      </h3>
      <ul>
        <li>
          <strong>
            collectionLocId:
          </strong>
           
          31105349912518444897773986398896608162
        </li>
        <li>
          <strong>
            itemId:
          </strong>
           a "0x" prefixed HEX string representation of 32 bytes uniquely identifying the item in this collection. For instance, the identifier may be a SHA256 hash.
        </li>
        <li>
          <strong>
            itemDescription:
          </strong>
           a UTF-8 encoded string of at most 4096 bytes
        </li>
      </ul>
    </div>
    <div
      className="limits"
    >
      <h3>
        Collection limits
      </h3>
      <ul>
        <li>
          <strong>
            Date limit:
          </strong>
           
        </li>
        <li>
          <strong>
            Item number limit:
          </strong>
           
          -
        </li>
      </ul>
    </div>
  </Dialog>
</div>
`;

exports[`CertificateAndLimits renders certificate, limits and buttons for open collection LOC and LO 1`] = `
<div
  className="CertificateAndLimits"
>
  <Row>
    <Col>
      <div
        className="certificate"
      >
        <h2>
          LOC Certificate public web address (URL):
          <ViewCertificateButton
            url="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
          <CopyPasteButton
            value="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
        </h2>
      </div>
    </Col>
    <Col>
      <div
        className="limits"
      >
        <div>
          <strong>
            Collection Date Limit:
          </strong>
           
          <InlineDateTime
            dateOnly={true}
          />
        </div>
        <div>
          <strong>
            Collection Item Limit:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Collection Upload Accepted:
          </strong>
           
          No
        </div>
      </div>
    </Col>
  </Row>
  <Row>
    <Col>
      <div
        className="buttons-row"
      >
        <ButtonGroup
          align="center"
        >
          <VTPSelectionButton />
          <ArchiveButton />
        </ButtonGroup>
      </div>
    </Col>
  </Row>
</div>
`;

exports[`CertificateAndLimits renders certificate, limits and buttons for void collection LOC and LO 1`] = `
<div
  className="CertificateAndLimits"
>
  <Row>
    <Col>
      <div
        className="certificate"
      >
        <h2>
          LOC Certificate public web address (URL):
          <ViewCertificateButton
            url="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
          <CopyPasteButton
            value="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
        </h2>
      </div>
    </Col>
    <Col>
      <div
        className="limits"
      >
        <div>
          <strong>
            Collection Date Limit:
          </strong>
           
          <InlineDateTime
            dateOnly={true}
          />
        </div>
        <div>
          <strong>
            Collection Item Limit:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Collection Upload Accepted:
          </strong>
           
          No
        </div>
      </div>
    </Col>
  </Row>
  <Row>
    <Col>
      <div
        className="buttons-row"
      >
        <ButtonGroup
          align="center"
        >
          <ArchiveButton />
        </ButtonGroup>
      </div>
    </Col>
  </Row>
</div>
`;

exports[`CertificateAndLimits renders certificate, limits and settings button for closed non-void collection LOC and User 1`] = `
<div
  className="CertificateAndLimits"
>
  <Row>
    <Col>
      <div
        className="certificate"
      >
        <h2>
          LOC Certificate public web address (URL):
          <ViewCertificateButton
            url="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
          <CopyPasteButton
            value="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
        </h2>
      </div>
    </Col>
    <Col>
      <div
        className="limits"
      >
        <div>
          <strong>
            Collection Date Limit:
          </strong>
           
          <InlineDateTime
            dateOnly={true}
          />
        </div>
        <div>
          <strong>
            Collection Item Limit:
          </strong>
           
          -
        </div>
        <div>
          <strong>
            Collection Upload Accepted:
          </strong>
           
          No
        </div>
      </div>
    </Col>
  </Row>
  <Row>
    <Col>
      <div
        className="buttons-row"
      >
        <ButtonGroup
          align="center"
        >
          <Button
            onClick={[Function]}
          >
            <Icon
              height="22px"
              icon={
                Object {
                  "id": "cog",
                }
              }
            />
             Get dev settings
          </Button>
        </ButtonGroup>
      </div>
    </Col>
  </Row>
  <Dialog
    actions={
      Array [
        Object {
          "buttonText": "Close",
          "buttonVariant": "primary",
          "callback": [Function],
          "id": "close",
        },
      ]
    }
    className="CertificateAndLimits"
    show={false}
    size="xl"
  >
    <h2>
      Get developper settings for the requester application
    </h2>
    <p>
      Settings available below must be communicated to the developer of the application that will send data using logion API to record it according to the current Collection LOC scope.
    </p>
    <StaticLabelValue
      label="Documentation"
      value={
        <NewTabLink
          href="https://github.com/logion-network/logion-collection-item-submitter#logion-collection-item-submitter"
        >
          https://github.com/logion-network/logion-collection-item-submitter
        </NewTabLink>
      }
    />
    <StaticLabelValue
      label="Logion endpoint"
      value={
        <p>
          ws://localhost:9944
        </p>
      }
    />
    <StaticLabelValue
      label="Signature will be executed by the following public key"
      value={<p />}
    />
    <StaticLabelValue
      label="Extrinsic"
      value={
        <p>
          logionLoc.addCollectionItem(collectionLocId, itemId, itemDescription)
        </p>
      }
    />
    <div
      className="arguments"
    >
      <h3>
        Arguments
      </h3>
      <ul>
        <li>
          <strong>
            collectionLocId:
          </strong>
           
          31105349912518444897773986398896608162
        </li>
        <li>
          <strong>
            itemId:
          </strong>
           a "0x" prefixed HEX string representation of 32 bytes uniquely identifying the item in this collection. For instance, the identifier may be a SHA256 hash.
        </li>
        <li>
          <strong>
            itemDescription:
          </strong>
           a UTF-8 encoded string of at most 4096 bytes
        </li>
      </ul>
    </div>
    <div
      className="limits"
    >
      <h3>
        Collection limits
      </h3>
      <ul>
        <li>
          <strong>
            Date limit:
          </strong>
           
        </li>
        <li>
          <strong>
            Item number limit:
          </strong>
           
          -
        </li>
      </ul>
    </div>
  </Dialog>
</div>
`;

exports[`CertificateAndLimits renders only certificate and SoF request button for non-collection LOC and User 1`] = `
<div
  className="CertificateAndLimits"
>
  <Row>
    <Col>
      <div
        className="certificate"
      >
        <h2>
          LOC Certificate public web address (URL):
          <ViewCertificateButton
            url="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
          <CopyPasteButton
            value="http://localhost/public/certificate/31105349912518444897773986398896608162"
          />
        </h2>
      </div>
    </Col>
  </Row>
  <Row>
    <Col>
      <div
        className="buttons-row"
      >
        <ButtonGroup
          align="center"
        >
          <StatementOfFactsRequestButton />
        </ButtonGroup>
      </div>
    </Col>
  </Row>
</div>
`;
